# CaliBrain

./: .buildinfo  .gitattributes  .gitignore  2_BMN_R1  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Component_CI_R1  DATA_NOTICE.rst  Data_Generation_Final  Data_Generator_R1  GAMMA_MAP_R1  LICENSE  Metric_Evaluator_R1  README.md  README.rst  Uncertainty_Estimator_R1  __init__.py  _requirements.txt  adaptive_noise_learning  adaptive_noise_learning_new  eLORETA_caliBrain.py  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.md  readthedocs.yml  requirements.txt  run_calibrain.sh  run_experiments.py  search.html  searchindex.js  sg_execution_times.html  test_git_cluster  un_calib_metrics_sparse_fixed.py  uncertainty_calibration  uncertainty_estimation  (+1 more)
.doctrees/: index.doctree  sg_execution_times.doctree
.doctrees/api/: README.doctree
_ismail/: EMD_metric_fixed_free.py  eLORETA_caliBrain.py  sFLEX_gamma_MAP  s_FLEX_gamma_MAP_free_orient  un_calib_metrics_dense_fixed.py  uncertainty_calibration
_modules/: index.html
_sources/: index.rst.txt  sg_execution_times.rst.txt
_static/: custom.css  switcher.json
_temp/: BMN_R1.py  Data_Generation_Final  GAMMA_MAP_R1  Ismail_BMN_final  Ismail_BMN_joint_final  Joint_Learning_R1  MetricEvaluator  Uncertainty_Estimator_R1  adaptive_noise_learning_new  cross_val.py  joint_learning.py  sFLEX_gamma_MAP  s_FLEX_gamma_MAP_free_orient  updated_BMN  vbfa.py
api/: README.html
api_reference/: index.html
auto_examples/: index.html  leadfield_simulation_example.html  run_experiments.html  sg_execution_times.html
auto_tutorials/: 01_what_is_calibrain.html  02_source_simulation.html  03_leadfield_building.html  04_sensor_simulation.html  05_source_estimation.html  06_uncertainty_estimation.html  07_uncertainty_calibration.html  08_metric_evaluation.html  09_end_to_end_workflow.html  10_data_generator.html  index.html  overview.html  sensor_simulation_tutorial.html  sg_execution_times.html  source_simulation_tutorial.html  text.html  visualization_tutorial.html
calibrain/: BMN  BMN_last  Componentwise_CI  Data_generator_R1.py  Ismail_BMN_final  Ismail_BMN_joint_final  MetricEvaluator  Uncertainty_Calibration  Uncertainty_Calibrator_R1  __init__.py  _test_magnitude_leadfield_MNEfsaverage.py  benchmark.py  calibration_dataset.py  calibration_storage.py  data_generation.py  data_sim.py  data_simulation.py  evaluation.py  extract_leadfield.py  joint_learning  lead_field_processing  leadfield_builder.py  leadfield_simulation.py  load_results.py  metric_evaluation.py  reduce_fwd.py  run_manifest.py  sensor_simulation.py  source_estimation.py  source_simulation  source_simulation.py  test_magnitude_leadfield_MNEfsaverage.py  uncertainty_calibration.py  uncertainty_estimation.py  utils.py  vbfa.py  visualization.py
cite/: index.html
configs/: README.md  aggregate_default.py  benchmark_default.py  calibration_default.py  data_generation_default.py  leadfield_sim_cfg.yml
datasets/: index.html
dev/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
development/: README.html  changelog.html  contributing.html  index.html
docs/: Makefile  requirements.txt
documentation/: README.html  index.html  overview.html  results.html  usage.html
examples/: 01_read_manifest_csv.py  02_plot_calibration_record.py  README.rst  dipole_sim_cfg.yml  dipole_simulation.py  gamma_map_simulation.ipynb  leadfield_simulation_example.py  run_experiments.py
installation/: README.html  conda_installation.html  index.html  pip_installation.html
scripts/: generate_readme_example.py
tests/: test_free_orientation_uncertainty.py  test_gamma_snr.py  test_metric_evaluation.py  test_simulation_and_generation.py  test_uncertainty_calibration.py  test_uncertainty_estimation.py
tutorials/: 00_motivation.py  01_quick_start.py  01_theoretical_foundations.py  01_what_is_calibrain.py  02_solver_families_and_uncertainty_behavior.py  02_source_simulation.py  03_leadfield_building.py  03_quick_start.py  04_sensor_simulation.py  04_source_simulation.py  05_data_generator.py  05_leadfield_building.py  06_sensor_simulation.py  06_source_estimation.py  07_data_generator.py  07_uncertainty_calibration.py  07_uncertainty_estimation.py  08_source_estimation.py  08_uncertainty_calibration.py  09_metric_evaluation.py  09_uncertainty_estimation.py  10_end_to_end_workflow.py  10_orientation_and_uncertainty_representations.py  10_uncertainty_calibration.py  11_metric_evaluation.py  12_end_to_end_workflow.py  13_orientation_and_uncertainty_representations.py  README.rst  index.html  overview.py  sensor_simulation_tutorial.py  source_simulation_tutorial.py
viz/: compare_solvers_noise_variances.py  plot_benchmark_calibration_statistics.py  plot_benchmark_statistics.py  plot_benchmark_violin_statistics.py  plot_calibration_curves.py  plot_cluster_exploration.py  plot_grouped_results.py  plot_overview_by_nnz.py  plot_overview_by_snr.py
(+354 files in other folders)
