[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calibrain"
version = "1.0.1"
description = "Simulation-based evaluation of uncertainty estimation and calibration in EEG/MEG inverse source imaging"
authors = [
    {name = "Mohammad Orabe", email = "orabe.mhd@gmail.com"},
    {name = "Ismail Huseynov", email = "ismailhuseynov6666@gmail.com"},
    {name = "Srikantan Nagarajan", email = "Srikantan.Nagarajan@ucsf.edu"},
    {name = "Stefan Haufe", email = "haufe@tu-berlin.de"}
]
license = {text = "BSD-3-Clause"}
readme = "README.rst"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "mne",
    "POT",
    "nibabel",
    "pyyaml",
    "pyvistaqt", # for plotting 3D brain surfaces
    "ipywidgets", # for interactive widgets in 3D brain surface plotting
    "PyQt5", # for creating the GUI
    "scipy",
    "h5py",
    "matplotlib",
    "joblib",
    "myst-parser",
]

[project.optional-dependencies]
dev = [
    "pytest==6.2.4"
]

docs = [
    "sphinx>=5.0.0,<8.0.0",
    "sphinx-rtd-theme>=1.0.1",
    "pydata-sphinx-theme>=0.13.0",  # Add this
    "sphinx-autodoc-typehints>=1.19.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-gallery>=0.19.0",
]

[project.scripts]
# calibrain-cli = "calibrain.cli:main"

[project.urls]
Homepage = "https://github.com/braindatalab/CaliBrain"
Repository = "https://github.com/braindatalab/CaliBrain"
# Wiki = "https://github.com/braindatalab/CaliBrain/wiki"
Documentation = "https://calibrain.readthedocs.io/"

[tool.setuptools.packages.find]
where = ["."]
include = ["calibrain*"]
exclude = ["results*"]
